--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
                 <execution>
+			    <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-resources-plugin</artifactId>
+	            <version>3.1.0</version>
+				<executions>
+				<execution>
                     <id>repackage</id>
                     <goals>
                         <goal>repackage</goal>
